Trying to debug why it is not running.

--- a/provision/vivo/deploy.properties
+++ b/provision/vivo/deploy.properties
@@ -41,7 +41,7 @@ vitro.core.dir = ./Vitro
 #      vivo.core.dir = ../vivo
 #      vivo.core.dir = /usr/local/vitro/trunk
 #nihvivo.dir = ../vivo-rel-1.2
-nihvivo.dir = ./VIVO
+nihvivo.dir = ./vivo
 
 #
 # The base install directory for your Tomcat server. The VIVO application
